[package]
name = "poem_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
poem = { version = "1.3.59", features = ["websocket"] }
tokio = { version = "1.34.0", features = ["rt"] }
tokio-tungstenite = "0.20.1"
url = "2.5.0"
